# django-comment

./: .coveragerc  .gitignore  LICENSE.txt  Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
django_comment/: admin.py  apps.py  models.py
django_comment/migrations/: 0001_initial.py
example_project/example_app/: admin.py  models.py
example_project/example_app/migrations/: 0001_initial.py
example_project/example_project/: settings.py
src/django_comment/: apps.py
tests/: test_admin.py  test_models.py  test_settings.py
tests/test_app/: admin.py  models.py
tests/test_app/migrations/: 0001_initial.py
