[metadata]
name = django-comment
version = 0.2.0
long_description = file: README.md, LICENSE.txt
url = https://github.com/genosltd/django-comment
author = Genadij Razdorov
author_email = genadijrazdorov@gmail.com
clasifiers = 
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Framework :: Django
    Development Status :: 3 - Alpha

[options]
package_dir =
    =src
packages = find:
install_requires =
    django >= 3.1

[options.packages.find]
where = src
